<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcEGFRFragment"
    android:id="@+id/calcEGFRContainer">

    <TextView
        android:id="@+id/egfrTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/kalkulator_egfr"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/egfrHeightLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/podaj_wzrost_cm"
        android:gravity="center"
        android:textColor="#555555"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egfrTitle" />

    <EditText
        android:id="@+id/egfrHeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wzrost_dziecka_hint"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egfrHeightLabel"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/egfrCreatinineLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/podaj_egfr"
        android:textColor="#555555"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egfrHeightInput" />

    <EditText
        android:id="@+id/egfrCreatinineInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stezenie_kreatyniny"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/egfrCreatinineLabel"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/egfrButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/oblicz_egfr"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/egfrHeightInput"
        app:layout_constraintStart_toStartOf="@+id/egfrHeightInput"
        app:layout_constraintTop_toBottomOf="@+id/egfrCreatinineInput"
        tools:ignore="VisualLintButtonSize" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/egfrHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <TextView
        android:id="@+id/resultEGFRLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/egfr"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/egfrButton"
        app:layout_constraintStart_toStartOf="@+id/egfrButton"
        app:layout_constraintTop_toTopOf="@+id/egfrHorizontalGuideline" />

    <TextView
        android:id="@+id/resultEGFR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textColor="#CC0000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/resultEGFRLabel"
        app:layout_constraintStart_toStartOf="@+id/resultEGFRLabel"
        app:layout_constraintTop_toBottomOf="@+id/resultEGFRLabel" />

    <TextView
        android:id="@+id/resultEGFRUnit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/egfr_jednostka"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/resultEGFRLabel"
        app:layout_constraintStart_toStartOf="@+id/resultEGFRLabel"
        app:layout_constraintTop_toBottomOf="@+id/resultEGFR" />

</androidx.constraintlayout.widget.ConstraintLayout>