<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/medicineContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicineFragment">

    <TextView
        android:id="@+id/medicineTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/leki"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/medicineWeightLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/podaj_mase_ciala_kg"
        android:textColor="#555555"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/medicineTitle"
        app:layout_constraintStart_toStartOf="@+id/medicineHalfVertGuideline"
        app:layout_constraintTop_toBottomOf="@+id/medicineTitle" />

    <EditText
        android:id="@+id/medicineWeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:digits="0123456789.,"
        android:gravity="center"
        android:hint="@string/waga_dziecka_hint"
        android:inputType="numberDecimal"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/medicineCalculateButton"
        app:layout_constraintEnd_toEndOf="@id/medicineWeightLabel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/medicineWeightLabel"
        app:layout_constraintTop_toBottomOf="@+id/medicineWeightLabel"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/medicineListContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/medicineNameLabel"
        app:layout_constraintEnd_toStartOf="@+id/medicineHalfVertGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicineTitle">

        <TextView
            android:id="@+id/medicineListLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/wybierz_lek"
            android:textColor="#555555"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/medicineListSearchBar"
            app:layout_constraintStart_toStartOf="@+id/medicineListSearchBar"
            app:layout_constraintTop_toTopOf="@+id/medicineListGuideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/medicineListGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <android.widget.SearchView
            android:id="@+id/medicineListSearchBar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:iconifiedByDefault="false"
            android:queryHint="Wyszukaj"
            android:layout_margin="4dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/medicineListGuideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicineList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@color/base"
            android:scrollbarStyle="outsideInset"
            android:fadeScrollbars="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/medicineListSearchBar"
            app:layout_constraintStart_toStartOf="@+id/medicineListSearchBar"
            app:layout_constraintTop_toBottomOf="@+id/medicineListLabel"
            tools:listitem="@layout/fragment_medicine_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/medicineNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/placeholder"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/medicineResultHoriGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/medicineHalfVertGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/medicineResultHoriGuideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/medicineResultBottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/medicineResultValueContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicineResultLabelContainer"
        >
        <TextView
            android:id="@+id/medicineResultValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/brak_wagi"
            android:textColor="#CC0000"
            android:textSize="48sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="48sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeStepGranularity="6sp"
            android:layout_weight="1"
            tools:targetApi="o" />
        <TextView
            android:id="@+id/medicineResultExtraValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nan"
            android:gravity="center"
            android:textColor="#CC0000"
            android:textSize="48sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="48sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeStepGranularity="6sp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:targetApi="o" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/medicineResultDoseContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicineResultValueContainer">

        <TextView
            android:id="@+id/medicineResultDose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/times"
            android:textColor="#770000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/medicineResultExtraDose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/times"
            android:textColor="#770000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:visibility="gone"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/medicineResultLabelContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/medicineResultBottomGuideline"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/medicineResultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dawka_leku"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#555555"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/medicineResultExtraLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dawka_leku"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#555555"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </androidx.appcompat.widget.LinearLayoutCompat>



    <Button
        android:id="@+id/medicineCalculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/oblicz"
        app:layout_constraintBottom_toTopOf="@+id/medicineResultHoriGuideline"
        app:layout_constraintEnd_toEndOf="@+id/medicineWeightInput"
        app:layout_constraintStart_toStartOf="@+id/medicineWeightInput"
        app:layout_constraintTop_toBottomOf="@+id/medicineWeightInput"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>