<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalcABPMFragment"
    android:id="@+id/calcABPMContainer">

    <TextView
        android:id="@+id/abpmTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/kalkulator_abpm"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <RadioGroup
        android:id="@+id/abpmSexContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:orientation="horizontal"
        android:background="@drawable/radio_group_outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abpmTitle"
        >

        <RadioButton
            android:id="@+id/abpmBoyButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginBottom="2dp"
            android:text="Chołpak"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/radio_button_toggle"
            android:button="@null"
            android:checked="true"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/abpmGirlButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="Dziewczynka"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/base"
            android:gravity="center"
            android:background="@drawable/radio_button_toggle"
            android:button="@null"
            android:layout_weight="1"
            />

    </RadioGroup>

    <TextView
        android:id="@+id/abpmHeightLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/podaj_wzrost_cm"
        android:gravity="center"
        android:textColor="#555555"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abpmSexContainer"
    />

    <EditText
        android:id="@+id/abpmHeightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wzrost_dziecka_hint"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abpmHeightLabel"
        android:importantForAutofill="no"
        tools:ignore="VisualLintTextFieldSize"
    />

    <Button
        android:id="@+id/abpmCalculateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/oblicz_abpm"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/abpmHeightInput"
        app:layout_constraintStart_toStartOf="@+id/abpmHeightInput"
        app:layout_constraintTop_toBottomOf="@+id/abpmHeightInput"
        tools:ignore="VisualLintButtonSize"
    />

    <LinearLayout
        android:id="@+id/abpmResultLabelContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@id/abpmHorizGuideline"
        app:layout_constraintStart_toStartOf="@id/abpmCalculateButton"
        app:layout_constraintEnd_toEndOf="@id/abpmCalculateButton"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/abpmDayLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Dzień:"
            android:textColor="#555555"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
        />

        <TextView
            android:id="@+id/abpmNightLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Noc:"
            android:textColor="#555555"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
        />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/abpmResultContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abpmResultLabelContainer"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/abpmDayResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nan"
            android:textColor="#CC0000"
            android:textSize="48sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="48sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeStepGranularity="6sp"
            android:layout_weight="1"
            tools:targetApi="o"
        />

        <TextView
            android:id="@+id/abpmNightResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nan"
            android:textColor="#CC0000"
            android:textSize="48sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="48sp"
            android:autoSizeMinTextSize="30sp"
            android:autoSizeStepGranularity="6sp"
            android:layout_weight="1"
            tools:targetApi="o"
        />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/abpm24Label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="24h:"
        android:textColor="#555555"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/abpmResultContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/abpm24Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nan"
        android:textColor="#CC0000"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:maxLines="1"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="48sp"
        android:autoSizeMinTextSize="30sp"
        android:autoSizeStepGranularity="6sp"
        android:layout_weight="1"
        tools:targetApi="o"
        app:layout_constraintTop_toBottomOf="@id/abpm24Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/abpmWarnContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/abpm24Result"
        android:visibility="gone"
    >
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            />

        <ImageView
            android:id="@+id/abpmWarnImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@android:drawable/stat_sys_warning"
            app:tint="#770000" />

        <TextView
            android:id="@+id/abpmWarnText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Mutant"
            android:textSize="24sp"
            android:textColor="#770000"
            android:textStyle="bold"
            android:layout_weight="5"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/abpmHorizGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>